Fixed the units on each work page, made them easier for the large screen, now I just need to resize all the images so they fit perfectly on the large screen with no white spaces

--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,13 @@ li {
     opacity: .35;
 }
 
+work-imgs {
+    align-content: center;
+    padding-top: 20px;
+    width: 100%;
+    height: 30em;
+}
+
 @media only screen and (min-width:25em) {
  
     .nav li {
